force-app/main/default/objects/VisualAntidote__Form_Submission__c/VisualAntidote__Form_Submission__c.object-meta.xml
<CustomObject>
    <label>Form Submission</label>
    <nameField>
        <displayFormat>FFS-{000000}</displayFormat>
        <label>Form Submission ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>