force-app/main/default/objects/VisualAntidote__Form_Submission__c/fields/VisualAntidote__Context_Id__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Context_Id__c</fullName>
    <description>User Id of User who submitted the record</description>
    <label>Context Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>