force-app/main/default/objects/VisualAntidote__Form_Submission__c/fields/VisualAntidote__Details__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Details__c</fullName>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>