force-app/main/default/objects/VisualAntidote__Form_Submission__c/fields/VisualAntidote__Form_Type__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Form_Type__c</fullName>
    <label>Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ClassicRegular</fullName>
                <default>true</default>
                <label>ClassicRegular</label>
            </value>
            <value>
                <fullName>ClassicLightning</fullName>
            </value>
            <value>
                <fullName>NativeRegular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>