force-app/main/default/objects/VisualAntidote__Form_Submission__c/fields/VisualAntidote__Form_Used__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Form_Used__c</fullName>
    <formula>HYPERLINK(&#39;/apex/FormEditor?id=&#39; + VisualAntidote__Form__r.Id,  VisualAntidote__Form__r.Name , &#39;_blank&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Used</label>
    <type>Text</type>
</CustomField>