force-app/main/default/objects/VisualAntidote__Form_Submission__c/fields/VisualAntidote__Object_Order__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Object_Order__c</fullName>
    <label>Object Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>