force-app/main/default/objects/VisualAntidote__Form_Submission__c/fields/VisualAntidote__Related_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Related_Field_Name__c</fullName>
    <label>Related Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>