force-app/main/default/objects/VisualAntidote__Form_Submission__c/fields/VisualAntidote__Status__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Status__c</fullName>
    <defaultValue>&quot;Submitted&quot;</defaultValue>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>