force-app/main/default/objects/VisualAntidote__Form_Submission__c/fields/VisualAntidote__Submission__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submission</label>
    <referenceTo>VisualAntidote__Submission__c</referenceTo>
    <relationshipLabel>Form Submissions</relationshipLabel>
    <relationshipName>Form_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>