force-app/main/default/objects/VisualAntidote__Form_Submission__c/fields/VisualAntidote__User_Content_ID__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__User_Content_ID__c</fullName>
    <label>User Content ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>