force-app/main/default/objects/VisualAntidote__Form_Submission__c/fields/VisualAntidote__Verification_Emails__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Verification_Emails__c</fullName>
    <label>Verification_Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>