force-app/main/default/objects/VisualAntidote__Form_Submission__c/listViews/VisualAntidote__All.listView-meta.xml
<ListView>
    <fullName>VisualAntidote__All</fullName>
    <columns>NAME</columns>
    <columns>VisualAntidote__Form__c</columns>
    <columns>VisualAntidote__Object__c</columns>
    <columns>VisualAntidote__Record_Created_Updated__c</columns>
    <columns>VisualAntidote__Submission_Date__c</columns>
    <columns>VisualAntidote__IP_Address__c</columns>
    <columns>VisualAntidote__Status__c</columns>
    <columns>VisualAntidote__Details__c</columns>
    <columns>VisualAntidote__User_Content_ID__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>